# pizzaGPT

./: .gitignore  LICENSE  README.md  pyproject.toml
apps/pizzagpt-client/: main.py  pyproject.toml
apps/pizzagpt-mcp/: main.py
apps/pizzagpt_client/: main.py  pyproject.toml
apps/pizzagpt_client/src/pizzagpt_client/: __init__.py  main.py
apps/pizzagpt_mcp/: pyproject.toml
apps/pizzagpt_mcp/db/: database.py
apps/pizzagpt_mcp/db/models/: customer.py
apps/pizzagpt_mcp/src/pizzagpt_mcp/: __init__.py  main.py  server.py
apps/pizzagpt_mcp/src/pizzagpt_mcp/api/: __init__.py  tools.py
apps/pizzagpt_mcp/src/pizzagpt_mcp/db/: seed_data.py
apps/pizzagpt_mcp/src/pizzagpt_mcp/db/models/: __init__.py  ingredient.py  menu_item.py  order.py  order_item.py
apps/pizzagpt_mcp/src/pizzagpt_mcp/tools/: __init__.py  customers.py
apps/pizzagpt_mcp/tools/: customers.py  menu.py  orders.py
