[project]
name = "pizzagpt"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "pizzagpt-client",
    "pizzagpt-mcp",
]

[tool.uv.workspace]
members = [
    "apps/pizzagpt_client",
    "apps/pizzagpt_mcp",
]

[tool.uv.sources]
pizzagpt-client = { workspace = true }
pizzagpt-mcp = { workspace = true }
