[project]
name = "pizzagpt-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "pgmystery", email = "philipp.glaw@gmx.de" }
]
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.0.7",
    "langchain-mcp-adapters>=0.1.13",
    "langchain-ollama>=1.0.0",
    "langgraph-cli[inmem]>=0.4.7",
    "python-dotenv>=1.2.1",
]

[project.scripts]
pizzagpt-client = "pizzagpt_client:main"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"
